--- a/contact.html
+++ b/contact.html
@@ -1,24 +1,27 @@
+<meta charset="UTF-8">
 <!DOCTYPE html>
 <html>
 <head>
   <title>Contact - Smart Microscopy</title>
   <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="icon" type="image/x-icon" href="assets/images/logo.png">  
+  
 </head>
 <body>
 
 <header class="site-header">
   <nav class="nav-container">
-    <a href="index.html" class="logo">
+    <a href="index" class="logo">
       <img src="assets/images/logo.png" alt="Smart Microscopy Logo">
     </a>
 
     <div class="nav-links">
-      <a href="index.html">Home</a>
-      <a href="news.html">News</a>
-      <a href="resources.html">Resources</a>
-      <a href="education.html">Education</a>
-      <a href="literature.html">Literature</a>
-      <a href="contact.html">Contact</a>
+      <a href="index">Home</a>
+      <a href="news">News</a>
+      <a href="resources">Resources</a>
+      <a href="education">Education</a>
+      <a href="literature">Literature</a>
+      <a href="contact">Contact</a>
     </div>
   </nav>
 </header>
